# fast_file_search

./: .gitignore  .luacheckrc  .mcp.json  AGENTS.md  Cargo.toml  Makefile  PLAN.md  README.md  REMAINING.md  _typos.toml  empty_config.lua  entities.json  flake.nix  install-mcp.ps1  install-mcp.sh  install.ps1  install.sh  package-lock.json  package.json  plan_artifact_mode.md  plan_callees_deps.md  plan_callers_cli.md  plan_search_improvements.md  plan_view_cascade.md
.agents/skills/rust-release/: SKILL.md
.beads/: config.yaml  issues.jsonl
.devin/skills/scry-stream-b/: SKILL.md
.github/workflows/: bench-track.yml  demo.yml  external-tests.yml  flamegraph.yml  nix.yml  panvimdoc.yaml  release.yaml  rust.yml
.ntm/summaries/: fast_file_search-20260606-010009.json
.sisyphus/: ralph-loop.local.md
.sisyphus/run-continuation/: ses_1d5c53305ffeztB4Hbckd15Ell.json
Formula/: fff-mcp.rb
crates/fff-budget/: Cargo.toml
crates/fff-budget/benches/: filter_bench.rs  truncate_bench.rs
crates/fff-budget/src/: cascade.rs  lib.rs  tokens.rs
crates/fff-c/: Cargo.toml  cbindgen.toml
crates/fff-c/include/: fff.h
crates/fff-c/src/: ffi_types.rs  lib.rs  scry_ffi.rs
crates/fff-cli/: Cargo.toml
crates/fff-cli/assets/: AGENT_GUIDE.md
crates/fff-cli/src/: cli.rs  main.rs
crates/fff-cli/src/commands/: callees.rs  callees_bfs.rs  callees_detail.rs  callees_format.rs  callees_resolve.rs  callers.rs  callers_bfs.rs  deps.rs  deps_resolve.rs  did_you_mean.rs  dispatch.rs  expand.rs  facets.rs  find.rs  flow.rs  glob.rs  guide.rs  impact.rs  index.rs  map.rs  mcp.rs  mod.rs  outline.rs  outline_format.rs  overview.rs  read.rs  refs.rs  session.rs  siblings.rs  symbol.rs
crates/fff-cli/tests/: cli_callers_count_by.rs  cli_callers_suspicious.rs  cli_impact.rs  cli_read_outline_default.rs
crates/fff-core/: Cargo.toml
crates/fff-core/src/: background_watcher.rs  bigram_query.rs  constraints.rs  file_picker.rs  grep.rs  score.rs  types.rs
crates/fff-core/tests/: bigram_overlay_coherence_test.rs  bigram_overlay_integration.rs  fuzz_file_operations.rs  grep_integration.rs
crates/fff-engine/: Cargo.toml
crates/fff-engine/benches/: dispatch_bench.rs
crates/fff-engine/src/: classify.rs  dispatch.rs  lib.rs  memory.rs  prefilter.rs  ranking.rs  scanner.rs
crates/fff-grep/: Cargo.toml
crates/fff-mcp/: Cargo.toml
crates/fff-mcp/src/: main.rs  scry.rs  server.rs
crates/fff-nvim/: Cargo.toml
crates/fff-nvim/benches/: indexing_and_search.rs
crates/fff-nvim/src/: lib.rs  scry_bindings.rs
crates/fff-query-parser/: Cargo.toml
crates/fff-symbol/: Cargo.toml
crates/fff-symbol/benches/: bloom_bench.rs  symbol_bench.rs
crates/fff-symbol/src/: artifact.rs  bloom.rs  detection.rs  lib.rs  outline.rs  symbol_index.rs  types.rs
crates/ffs-budget/: Cargo.toml
crates/ffs-budget/benches/: filter_bench.rs  truncate_bench.rs
crates/ffs-budget/src/: cascade.rs  filter.rs  stream.rs  truncate.rs
crates/ffs-c/: Cargo.toml  cbindgen.toml
crates/ffs-c/include/: ffs.h
crates/ffs-c/src/: accessors.rs  engine_ffi.rs  ffi_types.rs  lib.rs  scry_ffi.rs
crates/ffs-cli/: Cargo.toml
crates/ffs-cli/assets/: AGENT_GUIDE.md
crates/ffs-cli/src/: bigram.rs  cache.rs  cli.rs  main.rs
crates/ffs-cli/src/commands/: callees.rs  callees_bfs.rs  callees_detail.rs  callees_resolve.rs  callers.rs  callers_bfs.rs  dedup.rs  deps.rs  deps_resolve.rs  did_you_mean.rs  dispatch.rs  expand.rs  find.rs  flow.rs  glob.rs  grep.rs  impact.rs  index.rs  map.rs  mcp.rs  mention.rs  mod.rs  multi_grep.rs  outline.rs  outline_format.rs  overview.rs  pagination.rs  read.rs  refs.rs  siblings.rs  symbol.rs
crates/ffs-cli/tests/: cli_cache_symbol.rs  cli_callers_count_by.rs  cli_callers_suspicious.rs  cli_impact.rs  cli_multi_grep.rs  cli_read_outline_default.rs
crates/ffs-core/: Cargo.toml  README.md
crates/ffs-engine/: Cargo.toml
crates/ffs-engine/benches/: dispatch_bench.rs
crates/ffs-engine/src/: api.rs  classify.rs  dispatch.rs  lib.rs  memory.rs  mention.rs  prefilter.rs  ranking.rs  scanner.rs
crates/ffs-engine/tests/: hashline_integration.rs
crates/ffs-grep/: Cargo.toml
crates/ffs-grep/src/: lib.rs  matcher.rs
crates/ffs-mcp/: Cargo.toml  build.rs
crates/ffs-mcp/src/: engine_tools.rs  healthcheck.rs  main.rs  mention_tools.rs  output.rs  scry_tools.rs  server.rs  update_check.rs
crates/ffs-nvim/: Cargo.toml
crates/ffs-query-parser/: Cargo.toml
crates/ffs-query-parser/src/: config.rs  lib.rs  location.rs  parser.rs
crates/ffs-symbol/: Cargo.toml
demo/: .gitignore  index.html  package.json
demo/data/: callees_dispatch.json  callees_fuzzy_search.json  callees_new.json  callees_run.json  callers_dispatch.json  callers_find.json  callers_fuzzy_search.json  callers_new.json  callers_search.json  files.json  grep_RwLock.json  grep_fuzzy_file_search.json  ol_crates_ffs-core_src_fuzzy_file_search.rs.json  ol_crates_ffs-engine_src_dispatch.rs.json  ol_crates_ffs-symbol_src_symbol_index.rs.json  overview.json  sym_default.json  sym_format.json  sym_new.json  sym_read.json  sym_run.json  sym_search.json
demo/src/: App.css  App.tsx  index.css
doc/: fff.nvim.txt  ffs.nvim.txt
docs/: FILE_PICKER_INIT_LATENCY_PLAN.md  MENTION_SYSTEM_PLAN.md
lua/fff/: combo_renderer.lua  conf.lua  core.lua  download.lua  file_renderer.lua  fuzzy.lua  git_utils.lua  health.lua  list_renderer.lua  location_utils.lua  main.lua  picker_ui.lua  scrollbar.lua  scry.lua  treesitter_hl.lua  utils.lua
lua/ffs/: combo_renderer.lua  conf.lua  core.lua  download.lua  engine.lua  file_renderer.lua  fuzzy.lua  git_utils.lua  health.lua  list_renderer.lua  location_utils.lua  main.lua  picker_ui.lua  scrollbar.lua  scry.lua  treesitter_hl.lua  utils.lua
plugin/: ffs.lua
scripts/: analyze-results.py  benchmark-claude.sh  determine-version.lua  determine-version.sh  diagnose_lockmdb.py  extract-demo-data.sh  release.sh  set-rust-version.lua  set-version.sh
tests/: clear_cache_spec.lua  fff_core_spec.lua  ffs_core_spec.lua  picker_dir_resolution_spec.lua  test_lazy_async_bug.sh  version_spec.lua
(+642 files in other folders)
