[workspace]
members = [
  "crates/ffs-c",
  "crates/ffs-core",
  "crates/ffs-mcp",
  "crates/ffs-nvim",
  "crates/ffs-query-parser",
  "crates/ffs-grep",
  "crates/ffs-symbol",
  "crates/ffs-budget",
  "crates/ffs-engine",
  "crates/ffs-cli",
]
resolver = "2"

[workspace.dependencies]
ffs-grep = { version = "0.7.2", path = "crates/ffs-grep" }
ffs-query-parser = { version = "0.7.2", path = "crates/ffs-query-parser", default-features = false }
ffs-symbol = { version = "0.1.0", path = "crates/ffs-symbol" }
ffs-budget = { version = "0.1.0", path = "crates/ffs-budget" }
ffs-engine = { version = "0.1.0", path = "crates/ffs-engine" }

# Shared dependencies
aho-corasick = "1"
ahash = "0.8"
bindet = "0.3"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4.2"
dirs = "5.0"
dunce = "1.0"
# git2 - base config without TLS (each crate adds platform-specific TLS)
git2 = { version = "0.20.2", default-features = false, features = [
  "vendored-libgit2",
] }
glidesort = "0.1"
globset = "0.4"
heed = "0.22.0"
ignore = "0.4.22"
memmap2 = "0.9"
mimalloc = "0.1.47"
zlob = "1.3.3"

mlua = { version = "0.11.1", features = ["module", "luajit"] }
neo_frizbee = { version = "0.10.2", features = ["match_end_col"] }
notify = { version = "9.0.0-rc.3" }
notify-debouncer-full = { package = "fff-notify-debouncer-full", version = "0.9.3" }
once_cell = "1.20.2"
parking_lot = "0.12"
pathdiff = "0.2.1"
rayon = "1.8.0"
regex = "1.11"
regex-syntax = "0.8"
smallvec = { version = "1.13", features = ["const_generics", "union"] }
thiserror = "2.0.10"
tracing = "0.1"

# Tree-sitter (AST symbol extraction)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-swift = "0.7"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-elixir = "0.3"

# Concurrent map / hashing / SIMD scan
dashmap = "6"
memchr = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI / subcommand parsing
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"

# Benchmarking
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.ci]
inherits = "release"
# we use lto=fat locally for better SIMD for the march=native but
# on CI when we cross compiling we should not exclude any cpu flags checking
lto = "thin"

[profile.bench]
inherits = "release"

# For Instruments / xctrace: release-level optimization but keep debuginfo
# and symbols so sampled frames resolve to real Rust names.
[profile.prof]
inherits = "release"
debug = "full"
strip = false
lto = "thin"
