[package]
name = "fff-budget"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Token-budget aware filters, smart truncation, and footer-preserving trimming for scry."

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "truncate_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false
