[package]
name = "fff-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line interface for scry — unified code search and read tool."

[[bin]]
name = "scry"
path = "src/main.rs"

[dependencies]
fff-search = { path = "../fff-core" }
fff-engine = { workspace = true }
fff-symbol = { workspace = true }
fff-budget = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
