[package]
name = "ffs-budget"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Token-budget aware filters, smart truncation, and footer-preserving trimming for ffs."
repository = "https://github.com/quangdang46/fast_file_search"
homepage = "https://github.com/quangdang46/fast_file_search"
documentation = "https://github.com/quangdang46/fast_file_search#readme"

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "truncate_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false

