[package]
name = "ffs-c"
version = "0.7.2"
edition = "2024"
description = "Raw C api of FFF file finder"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
zlob = ["ffs/zlob"]
# Optional scry FFI: pulls fff-engine + fff-symbol + fff-budget (and the
# tree-sitter language stack). Off by default to keep the existing C ABI
# byte-for-byte identical to the pre-scry release.
scry = ["dep:ffs-engine", "dep:ffs-symbol", "dep:ffs-budget"]

[dependencies]
mimalloc.workspace = true
tracing.workspace = true
git2.workspace = true

ffs = { package = "ffs-search", path = "../ffs-core" , version = "0.7.2" }
ffs-query-parser = { path = "../ffs-query-parser" , version = "0.7.2" }
ffs-engine = { workspace = true, optional = true }
ffs-budget = { workspace = true, optional = true }
ffs-symbol = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
