[package]
name = "ffs-c"
version = "0.7.2"
edition = "2024"
description = "Raw C api of ffs file finder"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[features]
default = []
zlob = ["ffs/zlob"]

[dependencies]
mimalloc.workspace = true
tracing.workspace = true
git2.workspace = true

ffs = { package = "ffs-search", path = "../ffs-core" , version = "0.7.2" }
ffs-query-parser = { path = "../ffs-query-parser" , version = "0.7.2" }
ffs-engine = { workspace = true }
ffs-budget = { workspace = true }
ffs-symbol = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
