[package]
name = "ffs-c"
version = "0.1.14"
edition = "2024"
license = "MIT"
description = "Raw C API for ffs file finder"
repository = "https://github.com/quangdang46/fast_file_search"
homepage = "https://github.com/quangdang46/fast_file_search"
documentation = "https://github.com/quangdang46/fast_file_search#readme"

[lib]
crate-type = ["cdylib"]

[features]
default = []
zlob = ["ffs/zlob"]

[dependencies]
mimalloc.workspace = true
tracing.workspace = true
git2.workspace = true
ignore = { workspace = true }

ffs = { package = "ffs-search", path = "../ffs-core", version = "0.1.12" }
ffs-query-parser = { path = "../ffs-query-parser", version = "0.1.12" }
ffs-engine = { workspace = true }
ffs-budget = { workspace = true }
ffs-symbol = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = { workspace = true }

