[package]
name = "ffs-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line interface for scry — unified code search and read tool."

[[bin]]
name = "ffs"
path = "src/main.rs"

[dependencies]
ffs-search = { path = "../ffs-core" }
ffs-engine = { workspace = true }
ffs-symbol = { workspace = true }
ffs-budget = { workspace = true }
neo_frizbee = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
