[package]
name = "ffs-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command line interface for ffs — unified code search and read tool."

[[bin]]
name = "ffs"
path = "src/main.rs"

[features]
default = ["zlob"]
# Use zlob (Zig-compiled C globbing library) for glob matching. Mirrors
# ffs-search's `zlob` feature; requires Zig at build time.
zlob = ["ffs-search/zlob"]

[dependencies]
ffs-search = { path = "../ffs-core" }
ffs-engine = { workspace = true }
ffs-symbol = { workspace = true }
ffs-budget = { workspace = true }
neo_frizbee = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.5"
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
memchr = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
