[package]
name = "ffs-engine"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "Unified scanner, query dispatch, ranking and memory-budget enforcement for ffs."
repository = "https://github.com/quangdang46/fast_file_search"
homepage = "https://github.com/quangdang46/fast_file_search"
documentation = "https://github.com/quangdang46/fast_file_search#readme"

[dependencies]
ffs-search = { path = "../ffs-core", version = "0.1.6" }
ffs-symbol = { workspace = true }
ffs-budget = { workspace = true }
ffs-grep = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
ignore = { workspace = true }
memchr = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "dispatch_bench"
harness = false

