[package]
name = "ffs-mcp"
version = "0.7.2"
edition = "2024"
description = "MCP server for FFF file finder - drop-in replacement for AI code assistant search tools"
license = "MIT"

[[bin]]
name = "ffs-mcp"
path = "src/main.rs"

[features]
default = ["zlob"]
zlob = ["ffs/zlob"]

[dependencies]
ffs = { package = "ffs-search", path = "../ffs-core", default-features = false , version = "0.7.2" }
ffs-query-parser = { path = "../ffs-query-parser", default-features = false , version = "0.7.2" }
ffs-engine = { workspace = true }
ffs-budget = { workspace = true }
ffs-symbol = { workspace = true }
ignore = { workspace = true }
mimalloc = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rmcp = { version = "1.1.0", features = ["server", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
git2 = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
