[package]
name = "ffs-query-parser"
version = "0.1.7"
edition = "2024"
license = "MIT"
description = "Query parser for ffs file finder — includes specific syntax for various constraints like globs, extensions, regex etc"
repository = "https://github.com/quangdang46/fast_file_search"
homepage = "https://github.com/quangdang46/fast_file_search"
documentation = "https://github.com/quangdang46/fast_file_search#readme"

[lib]
path = "src/lib.rs"

[features]
default = []
zlob = ["dep:zlob"]

[dependencies]
zlob = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false

